--- a/portfolio.html
+++ b/portfolio.html
@@ -99,17 +99,13 @@
                 TO VIEW MY RESUME <A href="E:\NIRUPAMA\PLACEMENT\NIRUPAMA N_RESUME.pdf" target="_blank">CLICK HERE</A><BR>
             </DIV>
             <DIV>
-                <H1>COMTACT</H1>
+                <H1>CONTACT</H1>
                 <P>EMAIL ADDRESS:ABC@GMAIL.COM</P>
             </DIV>
             <FOOTER>
                 <p style="text-align: center;"><b>&copy; 2023 NIRUPAMA. All Rights Reserved.</b></p>
             </FOOTER>
     </main>
-
-    <footer>
-        <!-- Footer content goes here -->
-    </footer>
 </body>
 </html>
 </HTML>
